examples/nginx-ingress/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
