examples/nginx-ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress-service
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test
        backend:
          serviceName: node-app-service
          servicePort: 8080
